# UserManagementService

./: .dockerignore  .env-defaults  .gitignore  Dockerfile  UserManagementService.postman_collection.json  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
localstack_volume/cache/: machine.json  server.test.pem  server.test.pem.crt  server.test.pem.key
src/alembic/: env.py
src/alembic/versions/: 0b0a772d898b_initial_migration.py  33f01f1fc3de_user_group_and_role_schemas.py
src/app/: config.py  main.py
src/app/api/dependencies/: auth_use_cases.py  user_use_cases.py  users_use_cases.py
src/app/api/dependencies/clients/: aws_service_client.py  redis_client.py  security_services.py  user_repo.py
src/app/api/routes/: api.py  auth.py  user.py  users.py
src/app/app_layer/errors/: handlers.py  strings.py  to_app.py
src/app/app_layer/errors/exceptions/: base_custom.py  database_exceptions.py  services_exceptions.py  use_cases_exceptions.py
src/app/app_layer/schemas/: auth.py  user.py
src/app/app_layer/use_cases/: auth.py  security.py  user.py  users.py
src/app/infra/: database_conntection.py
src/app/infra/repositories/sqla/: models.py  user.py
src/app/infra/services/: hashing.py  jwt.py  redis.py  s3.py  ses.py
